# image-format-converter

./: AUTHORS  BUGS  Makefile  Makefile.am  ProjectHome.md  README  README.linux  converter.cxx  fnc.h  xpm.cxx  xpm.h
include/: Makefile.am  bayer.h  converter.h  fnc.h  image.h  pixel.h  tga.h  xpm.h
samples/: flower.xpm
src/: bayer.c  converter.c  fnc.c  libifc.pc.in  tga.c  tiff.c  xpm.c  xpm.cxx
tests/: Makefile.am  example.c  example.cxx
tools/: Makefile.am
trunk/: BUGS  README.linux  bootstrap  configure.in  example.cxx
trunk/include/: bayer.h  converter.h  define.h  fnc.h  table.h  tga.h  tiff.h  types.h
trunk/samples/: lenna_head_404x398.raw
trunk/src/: Makefile.am  converter.cxx  image.c  main.cxx  table.h  tga.cxx
trunk/tests/: Makefile.am  example.c
